--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,18 @@
-body {
-    background-color: ghostwhite;
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+.App {
+    text-align: center;
+    min-width: 100%;
+    min-height: 100vh;
+    background-color: aqua;
+}
+
+.Header {
+    min-width: 100%;
+    min-height: 400px;
+    background-color: brown;
 }
