--- a/client/style.css
+++ b/client/style.css
@@ -1,24 +1,39 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    border: 1px solid black;
 }
 
 .App {
     text-align: center;
     min-width: 100%;
     min-height: 100vh;
-    background-color: aqua;
+    background-color: white;
 }
 
 .Header {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-width: 100%;
     height: 100px;
-    background-color: brown;
+    background-color: white;
+    position: fixed;
+    border: 1px dotted black;
 }
-
+.links {
+    min-width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    border: 1px solid black;
+}
 #logo {
     width: 200px;
     height: 75px;
-    background-color: blue;
+    background-color: rgb(4, 4, 11);
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
 }
