--- a/client/style.css
+++ b/client/style.css
@@ -57,6 +57,7 @@ footer {
 
 #middle {
     background-color: cadetblue;
-    flex-grow: 4;
+    flex-grow: 2;
+    max-width: 700px;
     top: 170px;
 }
