--- a/client/style.css
+++ b/client/style.css
@@ -44,6 +44,7 @@ footer {
     flex-direction: row;
     position: absolute;
     top: 100px;
+    width: 800px;
 }
 #sidebar-left {
     background-color: aquamarine;
@@ -62,4 +63,8 @@ footer {
     background-color: cadetblue;
     flex-grow: 2;
     max-width: 700px;
+}
+
+#projects {
+    background-color: orange;
 }
