--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,12 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
+main {
+    text-align: center;
+}
 .App {
     text-align: center;
     min-width: 100%;
@@ -41,10 +44,12 @@ footer {
 
 #content {
     display: flex;
+    margin: auto;
+    text-align: center;
     flex-direction: row;
     position: absolute;
     top: 100px;
-    width: 800px;
+    width: 100%;
 }
 #sidebar-left {
     background-color: aquamarine;
@@ -62,7 +67,7 @@ footer {
 #middle {
     background-color: cadetblue;
     flex-grow: 2;
-    max-width: 700px;
+    width: 700px;
 }
 
 .resume-item {
