cleared css and init tailwind

--- a/client/style.css
+++ b/client/style.css
@@ -1,80 +1,3 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
-    border: 1px solid black;
-}
-
-main {
-    text-align: center;
-}
-.App {
-    text-align: center;
-    min-width: 100%;
-    min-height: 100vh;
-    background-color: white;
-}
-
-.Header {
-    display: flex;
-    flex-direction: column;
-    z-index: 1;
-    align-items: center;
-    min-width: 100%;
-    height: 100px;
-    background-color: white;
-    position: fixed;
-    border: 1px dotted black;
-}
-.links {
-    min-width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    border: 1px solid black;
-}
-#logo {
-    width: 200px;
-    height: 75px;
-    background-color: rgb(4, 4, 11);
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-}
-
-#content {
-    display: flex;
-    margin: auto;
-    text-align: center;
-    flex-direction: row;
-    position: absolute;
-    top: 100px;
-    width: 100%;
-}
-#sidebar-left {
-    background-color: aquamarine;
-    min-width: 100px;
-    height: 100vh;
-    flex-grow: 1;
-}
-
-#sidebar-right {
-    background-color: lightcoral;
-    min-width: 100px;
-    flex-grow: 1;
-}
-
-#middle {
-    background-color: cadetblue;
-    flex-grow: 2;
-    width: 700px;
-}
-
-.resume-item {
-    background-color: orange;
-}
-
-#message-field {
-    width: 400px;
-    height: 200px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
